# scrimmage-team

./: Backlog-API-guide.md  CLAUDE.md  README.md  REVIEW.md  backlog_db.py  pyproject.toml  scrimmage-team.md  scrum-team.md  test_backlog_db.py  worktree_setup.py
.github/workflows/: ci.yml  deploy.yml
scrimmage/: scrimmage-team.md
scrimmage/notes/: scrimmage-master.md
